добавили счётчик и исправили рандомноее появление еды

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="playingField">
         <div class="menuResult">
             <div class="result">X:</div>
+            <div class="result">XX:</div>
             <button class="buttonStart active" type="button">Play</button>
             <button class="buttonStart buttonRestart" type="button">Restart</button>
             <img class="img-snake" src="images/snake.svg" alt="змейка">
