добавлен луший счет

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="playingField">
         <div class="menuResult">
-            <div class="result">X:</div>
-            <div class="result">XX:</div>
+            <div class="result">С</div>
+            <div class="result">Л</div>
             <button class="buttonStart active" type="button">Play</button>
             <button class="buttonStart buttonRestart" type="button">Restart</button>
             <img class="img-snake" src="images/snake.svg" alt="змейка">
