--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
             <img class="img-snake" src="images/snake.svg" alt="змейка">
         </div>
         <div class="game"></div>
+        <div class="difficultyLevel">
+            <h3 class="difficultyLevel__title">Выберети уровень сложности</h3>
+            <form class="form" action="">
+                <label for="easy">Легко
+                <input type="checkbox" name="1" class="input" id="easy" checked="checked">    
+                </label>
+                <label for="average">Средняя
+                <input type="checkbox" name="2" class="input" id="average">    
+                </label>
+                <label for="heavy">Тяжёлая
+                <input type="checkbox" name="3" class="input" id="heavy">    
+                </label>
+                <button type="button" class="form__btn">Выбрано</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
